# libsignal-protocol-c

./: .gitignore
key/: id_rsa.pub
src/: CMakeLists.txt  curve.c  key_helper.c  signal_protocol.c
src/Codistan/: hello_libsignal.c  one_way_simulation.c  signal_protocol_helper.c  signal_protocol_helper.h  signal_protocol_overrides.c  signal_protocol_overrides.h  test_protocol.c
tests/: CMakeLists.txt
